# discord-what-qua

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  Containerfile.dev  Install.md  LICENSE  NOTICE  README.md  vcpkg.json
.devcontainer/: Containerfile  devcontainer.json
.github/workflows/: I-wonder-if-it-builds.yaml  code-ql.yaml  tag-release.yaml  vcpkg-deps.yaml
Containers/dev/: Containerfile
scripts/: apt.sh  vcpkg.sh
src/: example_token.txt  ins.h  install-arm64.sh  install-x64.sh  main.cpp  token.env  token.txt  what-bot-arm64.service  what-bot-x64.service
